--- a/EShop/Views/_ViewImports.cshtml
+++ b/EShop/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EShop.ViewModels
 @using EShop.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper EShop.TagHelpers.*, EShop
